# inc_someip_gateway

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD  BUILD.bazel  CONTRIBUTION.md  Cargo.toml  MODULE.bazel  README.md  REUSE.toml  TODO.md  check_clang_format.sh  project_config.bzl  pyproject.toml  python_requirements_lock.txt  versions.json  vsomeip.BUILD.bazel
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
dependencies/: ref_int_deps.MODULE.bazel
deployment/: BUILD.bazel  defs.bzl
docs/: conf.py  index.rst  socom
main/: genindex.html  index.html  schema_violations.json  search.html
memory_profile/: README.md  massif.out.1
patches/: BUILD.bazel
pr-1/: index.html
pr-100/: schema_violations.json
pr-101/: schema_violations.json  search.html
pr-103/: index.html  schema_violations.json
pr-104/: schema_violations.json
pr-106/: schema_violations.json
pr-107/: schema_violations.json
pr-108/: schema_violations.json
pr-109/: genindex.html  schema_violations.json
pr-110/: schema_violations.json
pr-111/: schema_violations.json
pr-112/: schema_violations.json
pr-113/: schema_violations.json
pr-114/: schema_violations.json
pr-115/: schema_violations.json
pr-116/: schema_violations.json
pr-117/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
pr-119/: schema_violations.json
pr-12/: genindex.html  index.html  search.html
pr-121/: schema_violations.json
pr-122/: schema_violations.json
pr-125/: schema_violations.json
pr-126/: schema_violations.json  search.html
pr-127/: schema_violations.json
pr-128/: schema_violations.json
pr-129/: genindex.html  index.html  schema_violations.json  search.html
pr-13/: genindex.html  index.html  needs.json  searchindex.js
pr-130/: schema_violations.json  search.html
pr-131/: schema_violations.json
pr-132/: schema_violations.json
pr-133/: schema_violations.json  searchindex.js
pr-134/: schema_violations.json
pr-135/: schema_violations.json
pr-137/: schema_violations.json  search.html
pr-138/: schema_violations.json
pr-139/: schema_violations.json
pr-140/: schema_violations.json
pr-141/: genindex.html  index.html  objects.inv  schema_violations.json  search.html  searchindex.js
pr-142/: schema_violations.json
pr-143/: schema_violations.json
pr-144/: schema_violations.json
pr-145/: schema_violations.json
pr-146/: schema_violations.json
pr-147/: schema_violations.json
pr-148/: schema_violations.json
pr-149/: schema_violations.json
pr-150/: schema_violations.json
pr-151/: schema_violations.json
pr-152/: schema_violations.json
pr-153/: schema_violations.json
pr-154/: schema_violations.json
pr-155/: schema_violations.json
pr-156/: schema_violations.json
pr-157/: index.html  schema_violations.json
pr-158/: schema_violations.json
pr-159/: schema_violations.json
pr-16/: index.html  schema_violations.json  searchindex.js
pr-160/: schema_violations.json
pr-161/: schema_violations.json
pr-162/: schema_violations.json
pr-163/: schema_violations.json
pr-164/: genindex.html  schema_violations.json
pr-167/: schema_violations.json
pr-168/: schema_violations.json
pr-169/: schema_violations.json
pr-17/: index.html
pr-170/: schema_violations.json
pr-171/: schema_violations.json
pr-172/: schema_violations.json
pr-173/: schema_violations.json
pr-174/: schema_violations.json
pr-175/: index.html  schema_violations.json  searchindex.js
pr-176/: schema_violations.json
pr-177/: genindex.html  schema_violations.json
pr-178/: schema_violations.json
pr-179/: schema_violations.json
pr-18/: index.html
pr-180/: schema_violations.json
pr-181/: schema_violations.json
pr-182/: schema_violations.json
pr-183/: schema_violations.json
pr-184/: schema_violations.json
pr-185/: schema_violations.json
pr-186/: schema_violations.json
pr-187/: schema_violations.json
pr-188/: schema_violations.json
pr-189/: schema_violations.json
pr-19/: index.html
pr-191/: schema_violations.json
pr-192/: schema_violations.json
pr-193/: schema_violations.json
pr-194/: index.html  schema_violations.json
pr-195/: schema_violations.json
pr-196/: schema_violations.json
pr-197/: schema_violations.json
pr-199/: schema_violations.json
pr-2/: index.html  search.html
pr-20/: index.html
pr-200/: genindex.html  schema_violations.json
src/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
src/gatewayd/etc/: gatewayd_config.fbs  gatewayd_config.json  mw_com_config.json
src/gatewayd/interfaces/: someip_message_service.h
src/someipd/: BUILD.bazel  gateway_routing.cpp  gateway_routing.h  i_internal_ipc.h  i_network_stack.h  local_network_service.cpp  local_network_service.h  main.cpp  mwcom_adapter.cpp  mwcom_adapter.h  remote_network_service.cpp  routing.cpp  routing.h  someipd_config.h  someipd_config_reader.cpp  someipd_types.h  vsomeip_adapter.cpp  vsomeip_adapter.h
src/someipd/etc/: mw_com_config.json
tests/UT/: BUILD.bazel  test_ut.py
tests/UT/UnitTest_UT1/: BUILD.bazel  test_main.cpp
tests/UT/UnitTest_UT2/: BUILD.bazel  test_main.cpp
tests/performance_benchmarks/: BUILD.bazel  PERFORMANCE_ANALYSIS_DRAFT.md  echo_server.cpp  echo_service.h  ipc_benchmarks.cpp
tests/performance_benchmarks/config/: benchmark_mw_com_config.json
tests/tc8_conformance/: BUILD.bazel  README.md  conftest.py  tc8_itf_conftest.py  tc8_net_wrapper.sh  test_event_notification.py  test_field_conformance.py  test_sd_client.py  test_sd_format_compliance.py  test_sd_phases_timing.py  test_sd_reboot.py  test_sd_robustness.py  test_service_discovery.py  test_someip_message_format.py
tests/tc8_conformance/application/: README.md
tests/tc8_conformance/config/: tc8_someipd_config.schema.json  tc8_someipd_multi.json  tc8_someipd_sd.json  tc8_someipd_service.json
tests/tc8_conformance/helpers/: dut_lifecycle.py  sd_sender.py
(+1751 files in other folders)
