[workspace]
resolver = "2"

members = [
    "src/gateway",
    "src/gateway_common",
    "src/gateway_generated",
    "src/gateway_someip_adapters",
    "src/com_api_gen",
    "src/examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gateway = { path = "src/gateway" }
gateway_generated = { path = "src/gateway_generated" }
gateway_common = { path = "src/gateway_common" }
gateway_someip_adapters = { path = "src/gateway_someip_adapters" }
com_api_gen = { path = "src/com_api_gen" }

kyron = { git = "https://github.com/eclipse-score/orchestrator.git", rev = "7bb94ebae08805ea0a83dcc14f7c17da5ab927e6" }
kyron-foundation = { git = "https://github.com/eclipse-score/orchestrator.git", rev = "7bb94ebae08805ea0a83dcc14f7c17da5ab927e6" }
logging_tracing = { git = "https://github.com/eclipse-score/orchestrator.git", rev = "7bb94ebae08805ea0a83dcc14f7c17da5ab927e6" }


iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-container = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
abi-types-codegen = { git = "https://github.com/qorix-group/inc_abi_compatible_datatypes.git", rev = "7f2b4e050c93c96db2778994e63b1ef74982204d" }

com-api = { git = "https://github.com/qorix-group/inc_mw_com.git", rev = "9442805345b32ba019cb7592fe5436e1e22bdc97", features = [
   "iceoryx",
] }
com-api-runtime-iceoryx = { git = "https://github.com/qorix-group/inc_mw_com.git", rev = "9442805345b32ba019cb7592fe5436e1e22bdc97" }
