# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_ref_int", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_ref_int",
    commit = "073c0d38ef6cead6e30325a3b524ca5c9808da1d",
    patch_strip = 1,
    patches = ["//:third_party/score_ref_int-disable-unused-toolchain-includes.patch"],
    remote = "https://github.com/elektrobit-contrib/eclipse-score_reference_integration.git",
)

bazel_dep(name = "rules_boost", version = "0.0.0", dev_dependency = True, repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

# Required because score_ref_int declares this dependency without a version.
bazel_dep(name = "score_test_scenarios", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_test_scenarios",
    commit = "fec712d490ff5d46fae91332bafac4777b300026",
    remote = "https://github.com/eclipse-score/testing_tools.git",
)

# Required because score_ref_int declares these dependencies without versions.
bazel_dep(name = "score_baselibs_rust", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_baselibs_rust",
    commit = "4050b62f298b639d27c092f63858642c3d08f9a0",
    remote = "https://github.com/eclipse-score/baselibs_rust.git",
)

bazel_dep(name = "score_persistency", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_persistency",
    commit = "4d1fa1ae3c55d27d0f1e863b8cdf59a148651c5d",
    remote = "https://github.com/eclipse-score/persistency.git",
)

bazel_dep(name = "score_orchestrator", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_orchestrator",
    commit = "c5bcbd39fc6e124a26b1d66abbfc696a3319c2a4",
    remote = "https://github.com/eclipse-score/orchestrator.git",
)

bazel_dep(name = "score_kyron", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_kyron",
    commit = "fc9218cc23d5fc62dd45b2e9dfcc9403e71ab27a",
    remote = "https://github.com/eclipse-score/kyron.git",
)

bazel_dep(name = "score_lifecycle_health", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_lifecycle_health",
    commit = "2f2e9c4c3e6c6b38abd0b72f78c8ffb96dc7f9e8",
    remote = "https://github.com/eclipse-score/lifecycle.git",
)

bazel_dep(name = "score_logging", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_logging",
    commit = "0e9187f79a9935ca192779234b82f9d00dc4e335",
    patch_strip = 1,
    patches = ["//:third_party/score_logging-file-transfer-stub.patch"],
    remote = "https://github.com/eclipse-score/logging.git",
)

bazel_dep(name = "score_crates", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_crates",
    commit = "a5f4f5765acc83f9c23b0b12860e130b9ebef3a7",
    remote = "https://github.com/eclipse-score/score-crates.git",
)

bazel_dep(name = "score_platform", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_platform",
    commit = "1b51518e71835b02aef97433c5dd083339185256",
    remote = "https://github.com/eclipse-score/score.git",
)

bazel_dep(name = "score_process", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_process",
    commit = "42cfa87d5650fe4b70fcb8dce1cc0e24b658d687",
    remote = "https://github.com/eclipse-score/process_description.git",
)
