# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This daemon contains the SOME/IP communication stack and is QM
"""

load("@communication//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

# ============================================================================
# Main Binary
# ============================================================================
cc_binary(
    name = "someipd",
    srcs = ["main.cpp"],
    args = [
        "-service_instance_manifest",
        "$(rootpath etc/mw_com_config.json)",
    ],
    data = [
        "etc/mw_com_config.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/network_service:provider",
        "@communication//score/mw/com",
        "@score-baselibs//score/language/futurecpp",
        "@vsomeip",
    ],
)

# ============================================================================
# Configuration Validation
# ============================================================================
validate_json_schema_test(
    name = "mw_com_config_schema_valid",
    size = "small",
    json = "etc/mw_com_config.json",
    schema = "@communication//score/mw/com:config_schema",
    tags = ["lint"],
)
