# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This daemon contains the SOME/IP communication stack and is QM
"""

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@score_communication//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")

# Export config files for deployment
exports_files(
    [
        "etc/mw_com_config.json",
        "etc/someipd_config.json",
    ],
    visibility = ["//visibility:public"],
)

# ============================================================================
# Core Types (stack-independent SOME/IP types and constants)
# ============================================================================
cc_library(
    name = "someipd_types",
    hdrs = ["someipd_types.h"],
)

# ============================================================================
# Abstract Interfaces (Bridge pattern implementor interfaces)
# ============================================================================
cc_library(
    name = "i_network_stack",
    hdrs = ["i_network_stack.h"],
    deps = [":someipd_types"],
)

cc_library(
    name = "i_internal_ipc",
    hdrs = ["i_internal_ipc.h"],
)

# ============================================================================
# Config Reader (stack-independent)
# ============================================================================
cc_library(
    name = "someipd_config",
    srcs = ["someipd_config_reader.cpp"],
    hdrs = ["someipd_config.h"],
    deps = [
        ":someipd_types",
        "@nlohmann_json//:json",
    ],
)

# ============================================================================
# Gateway Routing (Bridge pattern abstraction — core routing logic)
# ============================================================================
cc_library(
    name = "gateway_routing",
    srcs = ["gateway_routing.cpp"],
    hdrs = ["gateway_routing.h"],
    deps = [
        ":i_internal_ipc",
        ":i_network_stack",
        ":someipd_config",
        "@score_baselibs//score/mw/log",
    ],
)

# ============================================================================
# vsomeip Adapter (Adapter pattern — SOME/IP network stack)
# ============================================================================
cc_library(
    name = "vsomeip_adapter",
    srcs = ["vsomeip_adapter.cpp"],
    hdrs = ["vsomeip_adapter.h"],
    deps = [
        ":i_network_stack",
        "@vsomeip",
    ],
)

# ============================================================================
# mw::com Adapter (Adapter pattern — internal IPC framework)
# ============================================================================
cc_library(
    name = "mwcom_adapter",
    srcs = ["mwcom_adapter.cpp"],
    hdrs = ["mwcom_adapter.h"],
    deps = [
        ":i_internal_ipc",
        "//src/network_service:provider",
        "@score_baselibs//score/mw/log",
        "@score_communication//score/mw/com",
    ],
)

# ============================================================================
# Main Binary
# ============================================================================
cc_binary(
    name = "someipd",
    srcs = ["main.cpp"],
    args = [
        "-service_instance_manifest",
        "$(rootpath etc/mw_com_config.json)",
        "-someipd_config",
        "$(rootpath etc/someipd_config.json)",
    ],
    data = [
        "etc/mw_com_config.json",
        "etc/someipd_config.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":gateway_routing",
        ":mwcom_adapter",
        ":someipd_config",
        ":vsomeip_adapter",
        "@score_baselibs//score/mw/log",
    ],
)

# ============================================================================
# Configuration Validation
# ============================================================================
validate_json_schema_test(
    name = "mw_com_config_schema_valid",
    size = "small",
    json = "etc/mw_com_config.json",
    schema = "@score_communication//score/mw/com:config_schema",
    tags = ["lint"],
)
